MathML tests trigger font cache assertions in debug bots https://bugs.webkit.org/show_bug.cgi?id=100268

Reviewed by Eric Seidel.

Source/WebCore:

Add a FontCachePurgePreventer to fix this.

Tested by existing tests.

* rendering/mathml/RenderMathMLOperator.cpp:
(WebCore::RenderMathMLOperator::updateFromElement):

LayoutTests:

* platform/chromium/TestExpectations:


Canonical link: https://commits.webkit.org/118339@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132424 268f45cc-cd09-0410-ab3c-d52691b4dbfc